Fixed word counting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "stdexcept": "c",
         "streambuf": "c",
         "functional": "c",
-        "utilities.h": "c"
+        "utilities.h": "c",
+        "unistd.h": "c"
     }
 }
